--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
     command:
       - '--config.file=/workspace/prometheus.yml'
   grafana:
-    image: grafana/grafana:8.4.3
+    image: grafana/grafana:9.3.6-ubuntu
     ports:
       - "3000:3000"
     volumes:
